<resources>
    <string name="app_name">PalindromeApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="name">Name</string>
    <string name="sentenceInput">Palindrome</string>
    <string name="check">Check</string>
    <string name="next">Next</string>
    <string name="wellcome">Wellcome</string>
    <string name="user_name">Jhon Deo</string>
    <string name="select_user">Selected User Name</string>
    <string name="chose_user">Choose a User</string>
    <string name="email">email@email.com</string>
    <string name="no_users_available">No Users Available</string>
</resources>
