<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".ui.firstscreen.FirstFragment">

    <ImageView
        android:id="@+id/iv_login"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_marginTop="186dp"
        android:layout_marginBottom="51dp"
        android:background="@drawable/circle_avatar"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_person" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="12dp" />

    <EditText
        android:id="@+id/palindromeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/sentenceInput"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="12dp" />

    <Button
        android:id="@+id/checkBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/check"
        android:background="@drawable/rounded_button"
        android:textSize="14sp" />

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:background="@drawable/rounded_button"
        android:textSize="14sp" />


</LinearLayout>